test/errors/observerMerkleProvider.ts
export enum ObserverMerkleProviderErrors {
  EpochAlreadySealed = 'EPOCH_ALREADY_SEALED',
  EpochInvalid = 'EPOCH_INVALID',
  ObserverVotedAlready = 'OBSERVER_VOTED_ALREADY',
  EpochNotReadyForSealing = 'EPOCH_NOT_READY_FOR_SEALING'
}
